redisinsight/ui/src/pages/home/components/styles.module.scss
.errorFieldText {
  float: left;
  font-size: 12px !important;
}

.error {
  color: var(--euiColorDangerText) !important;
}

:global(body .footerAddDatabase .empty-btn) {
  border-color: transparent;

  &:hover,
  &:active {
    background-color: var(--euiTooltipBackgroundColor);
  }
}

.errorForm {
  color: var(--euiColorDangerText) !important;
  padding-top: 25px;
  display: inline-block;
}

.dbInfoGroup {
  max-width: 100% !important;
  background-color: var(--euiColorLightestShade) !important;
  border: 1px solid var(--separatorColor) !important;
  padding: 10px 18px !important;
  border-radius: 4px;

  :global {
    .euiListGroupItem__label {
      pointer-events: none;
      word-break: break-word;
      white-space: initial;
    }

    .euiListGroupItem {
      padding: 4px 0;
      margin-top: 0 !important;
    }
  }
}

.dbInfoListValue {
  margin-left: 10px;
}

.dbInfoModules {
  padding-right: 0;
  margin-left: 0;
  height: 27px;
  & > div {
    display: inline-block;
    line-height: 20px;
    margin-top: 5px;
    vertical-align: top;
  }
}

.dbInfoModulesLabel {
  position: relative;
  display: inline-block !important;
  padding-right: 0 !important;
  width: auto;

  :global(.euiListGroupItem__text) {
    padding-right: 0 !important;
  }
}

.anchorEndpoints {
  position: absolute;
  right: 12px;
  top: 5px;
  pointer-events: auto !important;

  svg {
    width: 24px !important;
    height: 24px !important;
  }
}

.endpointsList * {
  font-weight: 300 !important;
}

.dbAliasInputContainer {
  display: inline-block;
  position: relative;
  width: calc(100% - 190px);
}

.btnOpen {
  float: right;
  svg {
    height: 20px;
    width: 20px;
  }
}

.hostPort {
  display: inline-block;
  margin-left: 10px;
}

.hostPort:hover .copyHostPortBtn {
  opacity: 1;
}

.copyHostPortBtn {
  margin-left: 10px;
  margin-bottom: 3px;
  opacity: 0;
  height: 0;
  transition: opacity 250ms ease-in-out;
}

.sentinelCollapsedField {
  font-size: 12px !important;
  word-break: break-all;
  padding-bottom: 5px;
}

:global(.euiFlexGroup--gutterLarge) > .dbInput {
  margin-top: 0 !important;
  margin-bottom: 0 !important;
  padding-bottom: 20px;

  &.dbInputBig{
    max-width: calc(50% - 24px);
  }
}

#dbAliasInputIcon {
  color: var(--euiTextSubduedColor) !important;
  width: 32px !important;
}

.message {
  margin-top: 5px;
  padding: 16px;
  background-color: var(--euiColorLightestShade);
  font-family: 'Graphik', sans-serif;
  color: var(--euiTextSubduedColor) !important;
  border: 1px solid var(--euiColorLightShade);

  :global(.euiTextColor), :global(.euiLink) {
    color: currentColor !important;
  }
}

.link {
  text-decoration: underline !important;

  &:hover {
    text-decoration: none !important;
  }
}

.tlsContainer {
  margin: 12px 0 10px;
  flex-wrap: wrap;

  :global(.euiCheckbox) {
    padding-bottom: 10px !important;
  }
}

.tslBoxSection {
  @media screen and (min-width: 767px) {
    margin-bottom: 20px;
  }
}

.tlsSniOpened {
  padding-bottom: 0;
}

.fullWidth {
  flex-basis: 100% !important;
}

.sshPassTypeWrapper {
  .sshPassType {
    display: flex;
    flex-direction: column;
    :global {
      .euiRadioGroup__item {
        margin-bottom: 8px !important;
        &:last-child {
          margin-bottom: 0 !important;
        }
      }
    }
  }
}

